refactor, cleanup, better integration with python logging
Signed-off-by: Steven Armstrong <steven.armstrong@inf.ethz.ch>

--- a/README
+++ b/README
@@ -10,3 +10,4 @@ PYTHONPATH="." python zerolog dispatch
 PYTHONPATH="." python zerolog tail
 # shell 3
 PYTHONPATH="." python zerolog emit 0.1
+PYTHONPATH="." python zerolog zeroemit 0.1
