add controller to diagram
Signed-off-by: Steven Armstrong <steven.armstrong@inf.ethz.ch>

--- a/README
+++ b/README
@@ -19,19 +19,19 @@
                      | |     | +---> config >---+
                      | |     | |
                      | |     | |
-     +------------+--+-+-----+-+--+
-     | zerolog    |  sub  |  pub  |
-     +------------+----------+-+--+
-                             | |
-                             | |
-    +--------< logs <--------+ |
-    |                          |
-    |               +-< logs <-+
-    |               |
-    |               |
- +-----------+   +-----------+   +-----------+
- | sub |     |   | sub |     |   | sub |     |
- +-----------+   +-----------+   +-----------+
+     +------------+---------------+--------+
+     | zerolog    |  sub  |  pub  | router |
+     +------------+---------------+--------+
+                             | |      |
+                             | |      |
+    +--------< logs <--------+ |      +--< config api >---+
+    |                          |                          |
+    |               +-< logs <-+                          |
+    |               |                                +---------+
+    |               |                                | dealer  |
+ +-----------+   +-----------+   +-----------+       +---------+
+ | sub |     |   | sub |     |   | sub |     |       | admin-1 |
+ +-----------+   +-----------+   +-----------+       +---------+
  | client-1  |   | client-2  |   | client-n  |
  +-----------+   +-----------+   +-----------+
 
