add example how to set log level
Signed-off-by: Steven Armstrong <steven.armstrong@id.ethz.ch>

--- a/README
+++ b/README
@@ -65,4 +65,5 @@ zerolog-server --config ./doc/dev/config.json -d
 zerolog-control --endpoint ipc:///tmp/zerolog/control -d endpoints
 zerolog-control --endpoint ipc:///tmp/zerolog/control -d list
 zerolog-client --endpoint ipc:///tmp/zerolog/control -d
-
+zerolog-control --endpoint ipc:///tmp/zerolog/control set some.logger level:DEBUG
+zerolog-control --endpoint ipc:///tmp/zerolog/control set some.logger level:INFO
